--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- start google font  -->
+    <!-- font-awesome icon start -->
+    <script
+      src="https://kit.fontawesome.com/cb6c074b0b.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- font-awesome icon end -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <!-- end google font  -->
+    <!-- google font start -->
 
-    <!-- start icon -->
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
-
-    <!-- end icon -->
+    <!-- google font end -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -42,10 +37,67 @@
         <!-- options -->
         <div class="dropdown-wrapper">
           <button class="menu-btn">
-            <ion-icon name="ellipsis-horizontal" class="md hydrated"></ion-icon>
+            <i class="fa-solid fa-ellipsis"></i>
           </button>
+
+          <!-- thame -->
+          <div class="dropdown-container">
+            <ul class="dropdown-list">
+              <li class="dropdown-item">
+                <p class="item-title">Theme</p>
+
+                <div class="theme-btn-group"></div>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
+
+      <!-- tasks list -->
+      <ul class="task-list">
+        <!-- <li class="task-item">
+          <div class="item-text">
+            <i class="fa-regular fa-circle"></i>
+            <i class="fa-regular fa-circle-check"></i>
+            fdhfdfdchfdchf
+          </div>
+          <i class="fa-solid fa-trash-can"></i>
+        </li> -->
+      </ul>
+
+      <!-- main -->
+      <div class="title-wrapper">
+        <img
+          src="images/calender-image.svg"
+          width="130"
+          height="115"
+          alt="calender image"
+          class="img"
+        />
+
+        <h2 class="h2">
+          Wondering where <br />
+          your tasks are?
+        </h2>
+      </div>
+
+      <!-- input -->
+      <form class="input-wrapper" title="Add a task in 'My Day'">
+        <i class="fa-solid fa-plus"></i>
+        <input
+          type="text"
+          placeholder=" Add a task"
+          class="input-field"
+          id="input-el"
+          autofocus="on"
+          autocomplete="off"
+        />
+      </form>
+
+
+
+
+      
     </div>
     <script src="js/script.js"></script>
   </body>
