added sound and theme data

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <!-- options -->
         <div class="dropdown-wrapper">
-          <button class="menu-btn">
+          <button class="menu-btn" onclick="setting()">
             <i class="fa-solid fa-ellipsis"></i>
           </button>
 
@@ -84,10 +84,9 @@
           autocomplete="off"
         />
       </form>
-
+      <!-- not valid msg -->
       <span id="msg"></span>
     </div>
     <script src="js/script.js"></script>
   </body>
 </html>
-<!-- <i class="fa-regular fa-circle-check"></i> -->
