finish the javascript

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!--  day /date -->
         <div>
           <h1 class="h1 header-title">My Day</h1>
-          <p class="header-time">Wednesday, Apr 5</p>
+          <p class="header-time" id="date-el"></p>
         </div>
         <!-- options -->
         <div class="dropdown-wrapper">
